test/files/neg/t550.check
t550.scala:6: error: type List takes type parameters
  def sum[a](xs: List)(implicit m: Monoid[a]): a =
                 ^
t550.scala:8: error: implicit error;
!I m: Monoid[a]
  sum(List(1,2,3))
     ^
2 errors
